[gd_scene load_steps=73 format=2]

[ext_resource path="res://Enemies/Sprites/Chimera/chimera_idle.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_lion_attack.png" type="Texture" id=2]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_lion_chargeup.png" type="Texture" id=3]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_walk.png" type="Texture" id=4]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_goat_chargeup.png" type="Texture" id=5]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_goat_attack.png" type="Texture" id=6]
[ext_resource path="res://Enemies/Sprites/Chimera/chimera_death.png" type="Texture" id=7]
[ext_resource path="res://Enemies/Chimera/Chimera.gd" type="Script" id=8]
[ext_resource path="res://Misc/Health_Bar.tscn" type="PackedScene" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 7 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 7 )
region = Rect2( 1024, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 1280, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 1536, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 1792, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 2048, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 1024, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 6 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 6 )
region = Rect2( 1024, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 6 )
region = Rect2( 1280, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 5 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 5 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 5 )
region = Rect2( 1024, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 5 )
region = Rect2( 1280, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 5 )
region = Rect2( 1536, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 5 )
region = Rect2( 1792, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 5 )
region = Rect2( 2048, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 5 )
region = Rect2( 2304, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 5 )
region = Rect2( 2560, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 5 )
region = Rect2( 2816, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 5 )
region = Rect2( 3072, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 5 )
region = Rect2( 3328, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 256, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 512, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 768, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 1024, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 1280, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 1536, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 1792, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 2048, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 2304, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 2560, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 2816, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 3072, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 3328, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 3584, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 3840, 0, 256, 110 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 4096, 0, 256, 110 )

[sub_resource type="SpriteFrames" id=59]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "death",
"speed": 10.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "walk",
"speed": 10.0
}, {
"frames": [ SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "lion_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "goat_attack",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "goat_chargeup",
"speed": 10.0
}, {
"frames": [ SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ) ],
"loop": true,
"name": "lion_chargeup",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=63]
extents = Vector2( 29.9338, 49.1087 )

[sub_resource type="RectangleShape2D" id=61]
extents = Vector2( 29.5, 24.75 )

[sub_resource type="RectangleShape2D" id=62]
extents = Vector2( 49, 19.25 )

[sub_resource type="RectangleShape2D" id=64]
extents = Vector2( 45.5, 19.5 )

[node name="Chimera" type="KinematicBody2D"]
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 59 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2, 27.5 )
scale = Vector2( 1.35965, 0.295263 )
shape = SubResource( 63 )

[node name="lion_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lion_box"]
position = Vector2( -76, 6 )
shape = SubResource( 61 )

[node name="goat_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="goat_box"]
position = Vector2( 95, 11 )
shape = SubResource( 62 )

[node name="attack" type="Timer" parent="."]
wait_time = 5.0

[node name="Health_Bar" parent="." instance=ExtResource( 9 )]
margin_left = -50.0
margin_top = -38.0
margin_right = 50.0
margin_bottom = 2.0

[node name="lion_charge" type="Timer" parent="."]
wait_time = 1.6

[node name="lion_attack" type="Timer" parent="."]
wait_time = 0.5

[node name="goat_charge" type="Timer" parent="."]
wait_time = 1.3

[node name="goat_attack" type="Timer" parent="."]
wait_time = 0.5

[node name="bump_area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="bump_area"]
position = Vector2( -1.5, 27.5 )
shape = SubResource( 64 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="lion_box" to="." method="_on_lion_box_body_entered"]
[connection signal="body_exited" from="lion_box" to="." method="_on_lion_box_body_exited"]
[connection signal="body_entered" from="goat_box" to="." method="_on_goat_box_body_entered"]
[connection signal="body_exited" from="goat_box" to="." method="_on_goat_box_body_exited"]
[connection signal="timeout" from="attack" to="." method="_on_attack_timeout"]
[connection signal="timeout" from="lion_charge" to="." method="_on_lion_charge_timeout"]
[connection signal="timeout" from="lion_attack" to="." method="_on_lion_attack_timeout"]
[connection signal="timeout" from="goat_charge" to="." method="_on_goat_charge_timeout"]
[connection signal="timeout" from="goat_attack" to="." method="_on_goat_attack_timeout"]
[connection signal="body_entered" from="bump_area" to="." method="_on_bump_area_body_entered"]
